--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   equatable: ^2.0.3
   stream_transform: ^2.0.0
   formz: ^0.4.1
+  favorite_button: ^0.0.4
+  path: ^1.8.0
+  sqflite: ^2.0.0+3
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
