--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   favorite_button: ^0.0.4
   path: ^1.8.0
   sqflite: ^2.0.0+3
+  focus_detector: ^2.0.1
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
