--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,10 @@ dependencies:
   path: ^1.8.0
   sqflite: ^2.0.0+3
   focus_detector: ^2.0.1
+  flutter_local_notifications: ^9.7.0
+  rxdart: ^0.27.4
+  android_alarm_manager_plus: ^2.0.6
+  intl: ^0.17.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
