--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -26,11 +26,13 @@ dependencies:
   intl: ^0.17.0
   shared_preferences: ^2.0.15
   cupertino_icons: ^1.0.2
+  mockito: ^5.2.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.2.0
 
 flutter:
   uses-material-design: true
