--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,22 +11,22 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-  http: ^0.13.4
-  flutter_bloc: ^8.0.1
-  equatable: ^2.0.3
-  stream_transform: ^2.0.0
+  http: ^1.1.0
+  flutter_bloc: ^8.1.3
+  equatable: ^2.0.5
+  stream_transform: ^2.1.0
   formz: ^0.4.1
   favorite_button: ^0.0.4
-  path: ^1.8.0
-  sqflite: ^2.0.0+3
+  path: ^1.8.3
+  sqflite: ^2.3.0
   focus_detector: ^2.0.1
   flutter_local_notifications: ^9.7.0
-  rxdart: ^0.27.4
-  android_alarm_manager_plus: ^2.0.6
-  intl: ^0.17.0
-  shared_preferences: ^2.0.15
-  cupertino_icons: ^1.0.2
-  mockito: ^5.2.0
+  rxdart: ^0.27.7
+  android_alarm_manager_plus: ^3.0.2
+  intl: ^0.18.1
+  shared_preferences: ^2.2.1
+  cupertino_icons: ^1.0.6
+  mockito: ^5.4.0
 
 dev_dependencies:
   flutter_test:
